# codeblocks_sfmirror

./: .gitignore  .travis.yml  AUTHORS  BUILD  README  README.release  bootstrap  codeblocks.plist.in  codeblocks.spec.fedora.in  codeblocks.spec.in  configure.ac  update_revision.sh
src/base/tinyxml/: Makefile.am  tinyxml.cpp  tinyxmlparser.cpp
src/plugins/codecompletion/resources/: Makefile.am  manifest.xml  settings.xrc
src/plugins/compilergcc/depslib/src/: Makefile.am  cache.c  filent.c  hash.c  headers.c  lists.c  main.c
src/plugins/contrib/FileManager/: CommitBrowser.cpp  FileExplorer.cpp  FileExplorer.h  FileExplorerSettings.cpp  FileExplorerUpdater.cpp  FileExplorerUpdater.h  FileManager.cpp  FileManager.h  FileManager_Windows.cbp  FileManager_wx30-unix.cbp  FileManager_wx31.cbp  FileManager_wx31_64.cbp  FileManager_wx32-unix.cbp  FileManager_wx32.cbp  FileManager_wx32_64.cbp  FileManager_wx33.cbp  FileManager_wx33_64.cbp  Makefile.am  directorymonitor.cpp  manifest.xml  se_globals.cpp
src/plugins/contrib/clangd_client/: Makefile.am  clangd_client_Windows.cbp  clangd_client_wx30-unix.cbp  clangd_client_wx30-unix_gtk3.cbp  clangd_client_wx31.cbp  clangd_client_wx31_64.cbp  clangd_client_wx32-unix.cbp  clangd_client_wx32.cbp  clangd_client_wx32_64.cbp  clangd_client_wx33.cbp  clangd_client_wx33_64.cbp
src/plugins/contrib/clangd_client/src/: ClangLocator.cpp  ClangLocator.h  ClgdCCToken.h  LSP_SymbolKind.h  Version.h
src/plugins/contrib/clangd_client/src/LSPclient/: client.cpp  client.h  json.hpp  lspdiagresultslog.cpp  lspdiagresultslog.h  protocol.h  transport.h  uri.h
src/plugins/contrib/clangd_client/src/codecompletion/: IdleCallbackHandler.h  LSPEventCallbackHandler.h  ccoptionsdlg.cpp  ccoptionsdlg.h  ccoptionsprjdlg.cpp  ccoptionsprjdlg.h  cctest_wx30-unix.cbp  cctest_wx31.cbp  cctest_wx31_64.cbp  cctreectrl.cpp  cctreectrl.h  classbrowser.cpp  classbrowser.h  classbrowserbuilderthread.cpp  classbrowserbuilderthread.h  codecompletion.cpp  codecompletion.doxy  codecompletion.h  codecompletion_full.doxy  coderefactoring.cpp  coderefactoring.h  doxygen_parser.cpp  doxygen_parser.h  gotofunctiondlg.cpp  gotofunctiondlg.h  insertclassmethoddlg.cpp  insertclassmethoddlg.h  parsemanager.cpp  parsemanager.h  parsemanager_base.cpp  parsemanager_base.h  selectincludefile.cpp  selectincludefile.h
src/plugins/contrib/clangd_client/src/codecompletion/cctest/: cctest_app.cpp  cctest_frame.cpp  cctest_frame.h  nativeparser_test.cpp  nativeparser_test.h  test.h
src/plugins/contrib/clangd_client/src/codecompletion/parser/: LSP_symbolsparser.cpp  LSP_symbolsparser.h  LSP_tokenizer.cpp  LSP_tokenizer.h  ParserCommon.h  ccdebuginfo.cpp  ccdebuginfo.h  cclogger.cpp  cclogger.h  expression.cpp  expression.h  parser.cpp  parser.h  parser_base.cpp  parser_base.h  profiletimer.cpp  profiletimer.h  searchtree.cpp  searchtree.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h  tokentree.cpp  tokentree.h
src/plugins/contrib/clangd_client/src/codecompletion/testing/: TESTING.workspace  cc_complex_declaration.cpp  cc_enum_c++11.cpp  cc_enumerator.cpp  cc_function_decl_list.cpp  cc_function_decls.cpp  cc_function_ptr.cpp  cc_function_ptr_com_interface.cpp  cc_function_return_enum.cpp  cc_loop_variables.cpp  cc_macro_expansion.cpp  cc_macro_expansion_infinite_loop.cpp  cc_macro_expansion_stringize.cpp  cc_mfc_expand_event_table.cpp  cc_namespaces.cpp  cc_parse_doxygen_document.cpp  cc_preprocessor.cpp  cc_recursive_macro_expand.cpp  cc_stl_container_template_.cpp  cc_structs.cpp  cc_structs_instances_declared.cpp  cc_type_alias.cpp  cc_type_with_attributes.cpp  cc_typedef_declaration.cpp  cc_typedef_pointer.cpp  cc_unnamed_class.cpp  cc_wx_event_handler_macro.cpp  cc_x_macro.cpp  codecompletion_test_result.txt  duplicate_header.cbp  duplicate_header.cpp  enumerator.cpp  function_args.cbp  function_args.cpp  function_decls.cbp  function_decls.cpp  impl_decl.cbp  impl_decl.cpp  impl_decl.h  impl_decl_main.cpp  (+11 more)
src/plugins/contrib/clangd_client/src/codecompletion/wxsmith/: CCTestFrame.wxs  goto_function.wxs
src/plugins/contrib/clangd_client/src/resources/: CC_ProxyProject.cbp  Makefile.am  clclassbrowser.xrc  clcodecompletion_toolbar.xrc  clinsert_class_method.xrc  clproject_settings.xrc  clselectincludefile.xrc  clsettings.xrc  manifest.xml
src/plugins/contrib/clangd_client/src/unixprocess/: StringUtils.h  asyncThreadTypes.cpp  asyncThreadTypes.h  fileutils.cpp  fileutils.h  procutils.cpp  procutils.h  wxStringHash.h
src/plugins/contrib/clangd_client/src/unixprocess/asyncprocess/: UnixProcess.cpp  UnixProcess.h  asyncprocess.cpp  asyncprocess.h  processreaderthread.cpp  processreaderthread.h
src/plugins/contrib/clangd_client/src/winprocess/asyncprocess/: StringUtils.cpp  StringUtils.h  asyncprocess.cpp  asyncprocess.h  processreaderthread.cpp  processreaderthread.h  procutils.cpp  procutils.h  smart_ptr.h  winprocess.cpp  winprocess.h  winprocess_impl.cpp  winprocess_impl.h
src/plugins/contrib/clangd_client/src/winprocess/misc/: clConsoleBase.cpp  clConsoleBase.h  cl_command_event.cpp.unix  cl_command_event.h.unix  fileutils.cpp  fileutils.h
src/plugins/contrib/wxContribItems/wxthings/: Makefile.am
src/plugins/contrib/wxContribItems/wxthings/samples/filebrws/: wxfilebrowser.cpp
src/plugins/contrib/wxContribItems/wxthings/src/: block.cpp  bmpcombo.cpp  dropdown.cpp  filebrws.cpp  genergdi.cpp  geometry.cpp  matrix2d.cpp  menubtn.cpp  optvalue.cpp  range.cpp  spinctld.cpp  toggle.cpp
src/plugins/displayevents/: DisplayEvents.cpp  DisplayEvents.h  DisplayEvents_wx32.cbp  DisplayEvents_wx32_64.cbp  DisplayEvents_wx33.cbp  DisplayEvents_wx33_64.cbp  Makefile.am  cbDisplayEvents-unix.cbp  cbDisplayEvents.cbp  cbDisplayEvents_Windows.cbp  cbDisplayEvents_wx30-unix.cbp  cbDisplayEvents_wx31.cbp  cbDisplayEvents_wx31_64.cbp  cbDisplayEvents_wx32.cbp  cbDisplayEvents_wx32_64.cbp  manifest.xml
src/tools/CBLauncher/: CbLauncher_Windows.cbp  CbLauncher_wx32.cbp  CbLauncher_wx32_64.cbp  CbLauncher_wx33.cbp  CbLauncher_wx33_64.cbp  Makefile.am  launcher.cpp  mainpage.h
(+2028 files in other folders)
