pkgdata_DATA = codecompletion.zip
CLEANFILES = $(pkgdata_DATA)

resources_forZIP = \
	classbrowser.xrc \
	codecompletion_toolbar.xrc \
	insert_class_method.xrc \
	manifest.xml \
	project_settings.xrc \
	selectincludefile.xrc \
	settings.xrc \
	\
	images/16x16/class_folder.png \
	images/16x16/class.png \
	images/16x16/class_private.png \
	images/16x16/class_protected.png \
	images/16x16/class_public.png \
	images/16x16/ctor_private.png \
	images/16x16/ctor_protected.png \
	images/16x16/ctor_public.png \
	images/16x16/dtor_private.png \
	images/16x16/dtor_protected.png \
	images/16x16/dtor_public.png \
	images/16x16/enumerator.png \
	images/16x16/enum.png \
	images/16x16/enum_private.png \
	images/16x16/enum_protected.png \
	images/16x16/enum_public.png \
	images/16x16/enums_folder.png \
	images/16x16/folder_blue_open.png \
	images/16x16/folder_blue.png \
	images/16x16/folder_green_open.png \
	images/16x16/folder_green.png \
	images/16x16/folder_open.png \
	images/16x16/folder.png \
	images/16x16/funcs_folder.png \
	images/16x16/header.png \
	images/16x16/keyword_cpp.png \
	images/16x16/keyword_d.png \
	images/16x16/macro_def_folder.png \
	images/16x16/macro_def.png \
	images/16x16/macro_use_folder.png \
	images/16x16/macro_use.png \
	images/16x16/macro_use_private.png \
	images/16x16/macro_use_protected.png \
	images/16x16/macro_use_public.png \
	images/16x16/method_private.png \
	images/16x16/method_protected.png \
	images/16x16/method_public.png \
	images/16x16/namespace.png \
	images/16x16/others_folder.png \
	images/16x16/symbols_folder.png \
	images/16x16/typedef.png \
	images/16x16/typedef_private.png \
	images/16x16/typedef_protected.png \
	images/16x16/typedef_public.png \
	images/16x16/typedefs_folder.png \
	images/16x16/unknown.png \
	images/16x16/var_private.png \
	images/16x16/var_protected.png \
	images/16x16/var_public.png \
	images/16x16/vars_folder.png \
	\
	images/20x20/class_folder.png \
	images/20x20/class.png \
	images/20x20/class_private.png \
	images/20x20/class_protected.png \
	images/20x20/class_public.png \
	images/20x20/ctor_private.png \
	images/20x20/ctor_protected.png \
	images/20x20/ctor_public.png \
	images/20x20/dtor_private.png \
	images/20x20/dtor_protected.png \
	images/20x20/dtor_public.png \
	images/20x20/enumerator.png \
	images/20x20/enum.png \
	images/20x20/enum_private.png \
	images/20x20/enum_protected.png \
	images/20x20/enum_public.png \
	images/20x20/enums_folder.png \
	images/20x20/folder_blue_open.png \
	images/20x20/folder_blue.png \
	images/20x20/folder_green_open.png \
	images/20x20/folder_green.png \
	images/20x20/folder_open.png \
	images/20x20/folder.png \
	images/20x20/funcs_folder.png \
	images/20x20/header.png \
	images/20x20/keyword_cpp.png \
	images/20x20/keyword_d.png \
	images/20x20/macro_def_folder.png \
	images/20x20/macro_def.png \
	images/20x20/macro_use_folder.png \
	images/20x20/macro_use.png \
	images/20x20/macro_use_private.png \
	images/20x20/macro_use_protected.png \
	images/20x20/macro_use_public.png \
	images/20x20/method_private.png \
	images/20x20/method_protected.png \
	images/20x20/method_public.png \
	images/20x20/namespace.png \
	images/20x20/others_folder.png \
	images/20x20/symbols_folder.png \
	images/20x20/typedef.png \
	images/20x20/typedef_private.png \
	images/20x20/typedef_protected.png \
	images/20x20/typedef_public.png \
	images/20x20/typedefs_folder.png \
	images/20x20/unknown.png \
	images/20x20/var_private.png \
	images/20x20/var_protected.png \
	images/20x20/var_public.png \
	images/20x20/vars_folder.png \
	\
	images/24x24/class_folder.png \
	images/24x24/class.png \
	images/24x24/class_private.png \
	images/24x24/class_protected.png \
	images/24x24/class_public.png \
	images/24x24/ctor_private.png \
	images/24x24/ctor_protected.png \
	images/24x24/ctor_public.png \
	images/24x24/dtor_private.png \
	images/24x24/dtor_protected.png \
	images/24x24/dtor_public.png \
	images/24x24/enumerator.png \
	images/24x24/enum.png \
	images/24x24/enum_private.png \
	images/24x24/enum_protected.png \
	images/24x24/enum_public.png \
	images/24x24/enums_folder.png \
	images/24x24/folder_blue_open.png \
	images/24x24/folder_blue.png \
	images/24x24/folder_green_open.png \
	images/24x24/folder_green.png \
	images/24x24/folder_open.png \
	images/24x24/folder.png \
	images/24x24/funcs_folder.png \
	images/24x24/header.png \
	images/24x24/keyword_cpp.png \
	images/24x24/keyword_d.png \
	images/24x24/macro_def_folder.png \
	images/24x24/macro_def.png \
	images/24x24/macro_use_folder.png \
	images/24x24/macro_use.png \
	images/24x24/macro_use_private.png \
	images/24x24/macro_use_protected.png \
	images/24x24/macro_use_public.png \
	images/24x24/method_private.png \
	images/24x24/method_protected.png \
	images/24x24/method_public.png \
	images/24x24/namespace.png \
	images/24x24/others_folder.png \
	images/24x24/symbols_folder.png \
	images/24x24/typedef.png \
	images/24x24/typedef_private.png \
	images/24x24/typedef_protected.png \
	images/24x24/typedef_public.png \
	images/24x24/typedefs_folder.png \
	images/24x24/unknown.png \
	images/24x24/var_private.png \
	images/24x24/var_protected.png \
	images/24x24/var_public.png \
	images/24x24/vars_folder.png \
	\
	images/28x28/class_folder.png \
	images/28x28/class.png \
	images/28x28/class_private.png \
	images/28x28/class_protected.png \
	images/28x28/class_public.png \
	images/28x28/ctor_private.png \
	images/28x28/ctor_protected.png \
	images/28x28/ctor_public.png \
	images/28x28/dtor_private.png \
	images/28x28/dtor_protected.png \
	images/28x28/dtor_public.png \
	images/28x28/enumerator.png \
	images/28x28/enum.png \
	images/28x28/enum_private.png \
	images/28x28/enum_protected.png \
	images/28x28/enum_public.png \
	images/28x28/enums_folder.png \
	images/28x28/folder_blue_open.png \
	images/28x28/folder_blue.png \
	images/28x28/folder_green_open.png \
	images/28x28/folder_green.png \
	images/28x28/folder_open.png \
	images/28x28/folder.png \
	images/28x28/funcs_folder.png \
	images/28x28/header.png \
	images/28x28/keyword_cpp.png \
	images/28x28/keyword_d.png \
	images/28x28/macro_def_folder.png \
	images/28x28/macro_def.png \
	images/28x28/macro_use_folder.png \
	images/28x28/macro_use.png \
	images/28x28/macro_use_private.png \
	images/28x28/macro_use_protected.png \
	images/28x28/macro_use_public.png \
	images/28x28/method_private.png \
	images/28x28/method_protected.png \
	images/28x28/method_public.png \
	images/28x28/namespace.png \
	images/28x28/others_folder.png \
	images/28x28/symbols_folder.png \
	images/28x28/typedef.png \
	images/28x28/typedef_private.png \
	images/28x28/typedef_protected.png \
	images/28x28/typedef_public.png \
	images/28x28/typedefs_folder.png \
	images/28x28/unknown.png \
	images/28x28/var_private.png \
	images/28x28/var_protected.png \
	images/28x28/var_public.png \
	images/28x28/vars_folder.png \
	\
	images/32x32/class_folder.png \
	images/32x32/class.png \
	images/32x32/class_private.png \
	images/32x32/class_protected.png \
	images/32x32/class_public.png \
	images/32x32/ctor_private.png \
	images/32x32/ctor_protected.png \
	images/32x32/ctor_public.png \
	images/32x32/dtor_private.png \
	images/32x32/dtor_protected.png \
	images/32x32/dtor_public.png \
	images/32x32/enumerator.png \
	images/32x32/enum.png \
	images/32x32/enum_private.png \
	images/32x32/enum_protected.png \
	images/32x32/enum_public.png \
	images/32x32/enums_folder.png \
	images/32x32/folder_blue_open.png \
	images/32x32/folder_blue.png \
	images/32x32/folder_green_open.png \
	images/32x32/folder_green.png \
	images/32x32/folder_open.png \
	images/32x32/folder.png \
	images/32x32/funcs_folder.png \
	images/32x32/header.png \
	images/32x32/keyword_cpp.png \
	images/32x32/keyword_d.png \
	images/32x32/macro_def_folder.png \
	images/32x32/macro_def.png \
	images/32x32/macro_use_folder.png \
	images/32x32/macro_use.png \
	images/32x32/macro_use_private.png \
	images/32x32/macro_use_protected.png \
	images/32x32/macro_use_public.png \
	images/32x32/method_private.png \
	images/32x32/method_protected.png \
	images/32x32/method_public.png \
	images/32x32/namespace.png \
	images/32x32/others_folder.png \
	images/32x32/symbols_folder.png \
	images/32x32/typedef.png \
	images/32x32/typedef_private.png \
	images/32x32/typedef_protected.png \
	images/32x32/typedef_public.png \
	images/32x32/typedefs_folder.png \
	images/32x32/unknown.png \
	images/32x32/var_private.png \
	images/32x32/var_protected.png \
	images/32x32/var_public.png \
	images/32x32/vars_folder.png \
	\
	images/40x40/class_folder.png \
	images/40x40/class.png \
	images/40x40/class_private.png \
	images/40x40/class_protected.png \
	images/40x40/class_public.png \
	images/40x40/ctor_private.png \
	images/40x40/ctor_protected.png \
	images/40x40/ctor_public.png \
	images/40x40/dtor_private.png \
	images/40x40/dtor_protected.png \
	images/40x40/dtor_public.png \
	images/40x40/enumerator.png \
	images/40x40/enum.png \
	images/40x40/enum_private.png \
	images/40x40/enum_protected.png \
	images/40x40/enum_public.png \
	images/40x40/enums_folder.png \
	images/40x40/folder_blue_open.png \
	images/40x40/folder_blue.png \
	images/40x40/folder_green_open.png \
	images/40x40/folder_green.png \
	images/40x40/folder_open.png \
	images/40x40/folder.png \
	images/40x40/funcs_folder.png \
	images/40x40/header.png \
	images/40x40/keyword_cpp.png \
	images/40x40/keyword_d.png \
	images/40x40/macro_def_folder.png \
	images/40x40/macro_def.png \
	images/40x40/macro_use_folder.png \
	images/40x40/macro_use.png \
	images/40x40/macro_use_private.png \
	images/40x40/macro_use_protected.png \
	images/40x40/macro_use_public.png \
	images/40x40/method_private.png \
	images/40x40/method_protected.png \
	images/40x40/method_public.png \
	images/40x40/namespace.png \
	images/40x40/others_folder.png \
	images/40x40/symbols_folder.png \
	images/40x40/typedef.png \
	images/40x40/typedef_private.png \
	images/40x40/typedef_protected.png \
	images/40x40/typedef_public.png \
	images/40x40/typedefs_folder.png \
	images/40x40/unknown.png \
	images/40x40/var_private.png \
	images/40x40/var_protected.png \
	images/40x40/var_public.png \
	images/40x40/vars_folder.png \
	\
	images/48x48/class_folder.png \
	images/48x48/class.png \
	images/48x48/class_private.png \
	images/48x48/class_protected.png \
	images/48x48/class_public.png \
	images/48x48/ctor_private.png \
	images/48x48/ctor_protected.png \
	images/48x48/ctor_public.png \
	images/48x48/dtor_private.png \
	images/48x48/dtor_protected.png \
	images/48x48/dtor_public.png \
	images/48x48/enumerator.png \
	images/48x48/enum.png \
	images/48x48/enum_private.png \
	images/48x48/enum_protected.png \
	images/48x48/enum_public.png \
	images/48x48/enums_folder.png \
	images/48x48/folder_blue_open.png \
	images/48x48/folder_blue.png \
	images/48x48/folder_green_open.png \
	images/48x48/folder_green.png \
	images/48x48/folder_open.png \
	images/48x48/folder.png \
	images/48x48/funcs_folder.png \
	images/48x48/header.png \
	images/48x48/keyword_cpp.png \
	images/48x48/keyword_d.png \
	images/48x48/macro_def_folder.png \
	images/48x48/macro_def.png \
	images/48x48/macro_use_folder.png \
	images/48x48/macro_use.png \
	images/48x48/macro_use_private.png \
	images/48x48/macro_use_protected.png \
	images/48x48/macro_use_public.png \
	images/48x48/method_private.png \
	images/48x48/method_protected.png \
	images/48x48/method_public.png \
	images/48x48/namespace.png \
	images/48x48/others_folder.png \
	images/48x48/symbols_folder.png \
	images/48x48/typedef.png \
	images/48x48/typedef_private.png \
	images/48x48/typedef_protected.png \
	images/48x48/typedef_public.png \
	images/48x48/typedefs_folder.png \
	images/48x48/unknown.png \
	images/48x48/var_private.png \
	images/48x48/var_protected.png \
	images/48x48/var_public.png \
	images/48x48/vars_folder.png \
	\
	images/56x56/class_folder.png \
	images/56x56/class.png \
	images/56x56/class_private.png \
	images/56x56/class_protected.png \
	images/56x56/class_public.png \
	images/56x56/ctor_private.png \
	images/56x56/ctor_protected.png \
	images/56x56/ctor_public.png \
	images/56x56/dtor_private.png \
	images/56x56/dtor_protected.png \
	images/56x56/dtor_public.png \
	images/56x56/enumerator.png \
	images/56x56/enum.png \
	images/56x56/enum_private.png \
	images/56x56/enum_protected.png \
	images/56x56/enum_public.png \
	images/56x56/enums_folder.png \
	images/56x56/folder_blue_open.png \
	images/56x56/folder_blue.png \
	images/56x56/folder_green_open.png \
	images/56x56/folder_green.png \
	images/56x56/folder_open.png \
	images/56x56/folder.png \
	images/56x56/funcs_folder.png \
	images/56x56/header.png \
	images/56x56/keyword_cpp.png \
	images/56x56/keyword_d.png \
	images/56x56/macro_def_folder.png \
	images/56x56/macro_def.png \
	images/56x56/macro_use_folder.png \
	images/56x56/macro_use.png \
	images/56x56/macro_use_private.png \
	images/56x56/macro_use_protected.png \
	images/56x56/macro_use_public.png \
	images/56x56/method_private.png \
	images/56x56/method_protected.png \
	images/56x56/method_public.png \
	images/56x56/namespace.png \
	images/56x56/others_folder.png \
	images/56x56/symbols_folder.png \
	images/56x56/typedef.png \
	images/56x56/typedef_private.png \
	images/56x56/typedef_protected.png \
	images/56x56/typedef_public.png \
	images/56x56/typedefs_folder.png \
	images/56x56/unknown.png \
	images/56x56/var_private.png \
	images/56x56/var_protected.png \
	images/56x56/var_public.png \
	images/56x56/vars_folder.png \
	\
	images/64x64/class_folder.png \
	images/64x64/class.png \
	images/64x64/class_private.png \
	images/64x64/class_protected.png \
	images/64x64/class_public.png \
	images/64x64/ctor_private.png \
	images/64x64/ctor_protected.png \
	images/64x64/ctor_public.png \
	images/64x64/dtor_private.png \
	images/64x64/dtor_protected.png \
	images/64x64/dtor_public.png \
	images/64x64/enumerator.png \
	images/64x64/enum.png \
	images/64x64/enum_private.png \
	images/64x64/enum_protected.png \
	images/64x64/enum_public.png \
	images/64x64/enums_folder.png \
	images/64x64/folder_blue_open.png \
	images/64x64/folder_blue.png \
	images/64x64/folder_green_open.png \
	images/64x64/folder_green.png \
	images/64x64/folder_open.png \
	images/64x64/folder.png \
	images/64x64/funcs_folder.png \
	images/64x64/header.png \
	images/64x64/keyword_cpp.png \
	images/64x64/keyword_d.png \
	images/64x64/macro_def_folder.png \
	images/64x64/macro_def.png \
	images/64x64/macro_use_folder.png \
	images/64x64/macro_use.png \
	images/64x64/macro_use_private.png \
	images/64x64/macro_use_protected.png \
	images/64x64/macro_use_public.png \
	images/64x64/method_private.png \
	images/64x64/method_protected.png \
	images/64x64/method_public.png \
	images/64x64/namespace.png \
	images/64x64/others_folder.png \
	images/64x64/symbols_folder.png \
	images/64x64/typedef.png \
	images/64x64/typedef_private.png \
	images/64x64/typedef_protected.png \
	images/64x64/typedef_public.png \
	images/64x64/typedefs_folder.png \
	images/64x64/unknown.png \
	images/64x64/var_private.png \
	images/64x64/var_protected.png \
	images/64x64/var_public.png \
	images/64x64/vars_folder.png \
	\
	images/svg/class_folder.svg \
	images/svg/class.svg \
	images/svg/class_private.svg \
	images/svg/class_protected.svg \
	images/svg/class_public.svg \
	images/svg/ctor_private.svg \
	images/svg/ctor_protected.svg \
	images/svg/ctor_public.svg \
	images/svg/dtor_private.svg \
	images/svg/dtor_protected.svg \
	images/svg/dtor_public.svg \
	images/svg/enumerator.svg \
	images/svg/enum.svg \
	images/svg/enum_private.svg \
	images/svg/enum_protected.svg \
	images/svg/enum_public.svg \
	images/svg/enums_folder.svg \
	images/svg/folder_blue_open.svg \
	images/svg/folder_blue.svg \
	images/svg/folder_green_open.svg \
	images/svg/folder_green.svg \
	images/svg/folder_open.svg \
	images/svg/folder.svg \
	images/svg/funcs_folder.svg \
	images/svg/header.svg \
	images/svg/keyword_cpp.svg \
	images/svg/keyword_d.svg \
	images/svg/macro_def_folder.svg \
	images/svg/macro_def.svg \
	images/svg/macro_use_folder.svg \
	images/svg/macro_use.svg \
	images/svg/macro_use_private.svg \
	images/svg/macro_use_protected.svg \
	images/svg/macro_use_public.svg \
	images/svg/method_private.svg \
	images/svg/method_protected.svg \
	images/svg/method_public.svg \
	images/svg/namespace.svg \
	images/svg/others_folder.svg \
	images/svg/symbols_folder.svg \
	images/svg/typedef.svg \
	images/svg/typedef_private.svg \
	images/svg/typedef_protected.svg \
	images/svg/typedef_public.svg \
	images/svg/typedefs_folder.svg \
	images/svg/unknown.svg \
	images/svg/var_private.svg \
	images/svg/var_protected.svg \
	images/svg/var_public.svg \
	images/svg/vars_folder.svg

EXTRA_DIST = \
	$(resources_forZIP)

codecompletion.zip: $(resources_forZIP)
	PWD=`pwd` cd $(srcdir) && zip $(PWD)/codecompletion.zip $(resources_forZIP) > /dev/null
